# rust-assembler

./: Cargo.toml  LICENSE  README.md  input.asm  instrucToBinary.json
src/: assembler.rs  main.rs
